--- a/Lab_3/style.css
+++ b/Lab_3/style.css
@@ -7,7 +7,7 @@ html, body {
 
 html {
   font-size: 10px;
-  background-color: #0077ff;
+  background-color: #929292;
 }
 
 body {
@@ -18,8 +18,15 @@ body {
 
 /* || typography */
 
-h1, h2, h3 {
-  font-family: 'Cinzel Decorative', cursive;
+h1 {
+  font-family: "Ranchers";
+  font-weight: bolder;
+  color: #2a2a2a;
+}
+
+h2, h3 {
+  font-family: "Ranchers";
+  font-weight: bold;
   color: #2a2a2a;
 }
 
@@ -63,17 +70,16 @@ header {
 }
 
 body > * {
-  background-color: rgb(0, 195, 255);
+  background-color: #929292;
   padding: 1%;
 }
 
 header {
-  background-color: #0077ff;
+  background-color: #0099ff;
   padding: 1%;
 }
 
 main, nav, article, aside, footer, section {
-  background-color: rgb(0, 195, 255);
   padding: 1%;
 }
 
@@ -92,6 +98,7 @@ nav {
   height: 50px;
   flex: 100%;
   display: flex;
+  background-color: rgb(0, 195, 255)
 }
 
 nav ul {
@@ -126,6 +133,7 @@ main {
 
 .row {
   display: flex;
+  background-color: #0099ff;
 }
 
 .column {
@@ -133,12 +141,8 @@ main {
   background-color: rgb(0, 195, 255);
 }
 
-.column2 {
-  flex: 66%;
-  background-color: rgb(0, 195, 255);
-  padding-left: 100px;
-}
 
 footer {
   margin-top: 10px;
+  background-color: #0099ff;
 }
