--- a/Assignment 1/style.css
+++ b/Assignment 1/style.css
@@ -1,44 +1,47 @@
 /* || General setup */
 
-html, body {
+html {
   margin: 0;
   padding: 0;
 }
 
 html {
   font-size: 10px;
-  background-color: #929292;
+  background-color: #FCC679;
+}
+
+header {
+  width: 100%;
 }
 
 body {
-  width: 70%;
+  width: 100%;
   min-width: 800px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  background-color: #FCC679;
 }
 
 /* || typography */
 
 h1 {
-  font-family: "Ranchers";
-  font-weight: bolder;
-  color: #2a2a2a;
+  font-family: "Impact";
+  color: #ffffff;
 }
 
 h2, h3 {
-  font-family: "Ranchers";
-  font-weight: bold;
+  font-family: "Impact";
   color: #2a2a2a;
 }
 
 p, input, li {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Arial";
   color: #2a2a2a;
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 6rem;
   text-align: center;
-  text-shadow: 2px 2px 10px black;
 }
 
 h2 {
@@ -62,87 +65,34 @@ header {
   display: inline-flex;
   flex-flow: row wrap;
   width: 100%;
+  background-color: #2881AD;
+  padding:  20px;
 }
 
-#pic {
-  width: 7%;
-  height: 7%;
+.headtext {
+  text-align: left;
+  flex: 5;
+  align-items: center;
+}
+
+.headpic {
+  width: 10%;
+  height: 10%;
+  justify-content: flex-end;
 }
 
 body > * {
-  background-color: #929292;
+  background-color: #FCC679;
+}
+
+main {
   padding: 1%;
 }
 
-header {
-  background-color: #0099ff;
-  padding: 1%;
-}
-
-main, nav, article, aside, footer, section {
-  padding: 1%;
-}
-
-h1 {
-  flex: 5;
-  text-transform: uppercase;
-}
-
-header img {
-  display: inline-flex;
-  height: 30px;
-  padding-top: 20.15px;
-}
-
-nav {
-  height: 50px;
-  flex: 100%;
-  display: flex;
-  background-color: rgb(0, 195, 255)
-}
-
-nav ul {
-  padding: 0;
-  list-style-type: none;
-  flex: 2;
-  display: flex;
-}
-
-nav li {
-  display: inline;
-  text-align: center;
-  flex: 1;
-}
-
-nav a, nav span {
-  display: inline-block;
-  font-size: 2rem;
-  height: 3rem;
-  line-height: 1.7;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: black;
-
-}
 
 /* || main layout */
 
-main {
-  display: flex;
-}
-
-.row {
-  display: flex;
-  background-color: #0099ff;
-}
-
-.column {
-  flex: 66%;
-  background-color: rgb(0, 195, 255);
-}
-
-
-footer {
-  margin-top: 10px;
-  background-color: #0099ff;
+img {
+  height: 40%;
+  width: 40%;
 }
