--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -1,20 +1,16 @@
-/* || General setup */
+/* || general setup */
 
-html {
-  margin: 0;
-  padding: 0;
-}
-
-html {
+.html {
   font-size: 10px;
   background-color: #FCC679;
 }
 
-header {
+.header {
   width: 100%;
+  padding-bottom: 15px;
 }
 
-body {
+.body {
   width: 100%;
   min-width: 800px;
   margin: 0;
@@ -24,43 +20,27 @@ body {
 
 /* || typography */
 
-h1 {
+.headtext {
   font-family: "Impact";
   color: #ffffff;
+  font-size: 6rem;
 }
 
-h2, h3 {
+.contenthead {
   font-family: "Impact";
-  color: #2a2a2a;
+  font-size: 3rem;
 }
 
-p, input, li {
+.wrapper {
   font-family: "Arial";
   color: #2a2a2a;
-}
-
-h1 {
-  font-size: 6rem;
-  text-align: center;
-}
-
-h2 {
-  font-size: 3rem;
-  text-align: center;
-}
-
-h3 {
-  font-size: 2.2rem;
-}
-
-p, li {
   font-size: 1.6rem;
   line-height: 1.5;
 }
 
 /* || header layout */
 
-header {
+.header {
   margin-bottom: 10px;
   display: inline-flex;
   flex-flow: row wrap;
@@ -81,18 +61,14 @@ header {
   justify-content: flex-end;
 }
 
-body > * {
-  background-color: #FCC679;
-}
-
-main {
-  padding: 1%;
-}
-
-
 /* || main layout */
 
-img {
-  height: 40%;
-  width: 40%;
+.wrapper {
+  width: 960px;
+  align-content: center;
+  display: flex;
+}
+
+.bodypic {
+  height: 15%;
 }
