--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -12,7 +12,7 @@
 
 .body {
   width: 100%;
-  min-width: 800px;
+  min-width: 1000px;
   margin: 0;
   padding: 0;
   background-color: #FCC679;
@@ -67,8 +67,17 @@
   width: 960px;
   align-content: center;
   display: flex;
+  justify-content: center;
+}
+
+.contentbody {
+  width: 310px;
+}
+
+.workhistory {
+  width: 630px;
 }
 
 .bodypic {
-  height: 15%;
+  height: 23%;
 }
