--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -1,6 +1,10 @@
 /* || breakpoints */
 
 @media (max-width: 1000px) {
+  .html {
+    background-color: aqua;
+  }
+
   .headpic {
     height: 20%;
     width: 20%;
@@ -12,7 +16,7 @@
   }
 
   .contentbody {
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
 
