--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -7,13 +7,11 @@
 
 .header {
   width: 100%;
-  padding-bottom: 15px;
 }
 
 .body {
   width: 100%;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
   background-color: #FCC679;
 }
 
@@ -34,30 +32,30 @@
   font-family: "Arial";
   color: #2a2a2a;
   font-size: 1.6rem;
-  line-height: 1.5;
+  line-height: 1.4;
 }
 
 /* || header layout */
 
 .header {
-  margin-bottom: 10px;
   display: inline-flex;
   flex-flow: row wrap;
   width: 100%;
   background-color: #2881AD;
-  padding:  20px;
 }
 
 .headtext {
   text-align: left;
   flex: 5;
   align-items: center;
+  padding: 20px;
 }
 
 .headpic {
   width: 10%;
   height: 10%;
-  justify-content: flex-end;
+  align-items: center;
+  padding: 20px;
 }
 
 /* || main layout */
@@ -67,11 +65,12 @@
   align-content: center;
   display: flex;
   margin: auto;
+  padding-top: 15px;
 }
 
 .contentbody {
   width: 310px;
-  padding: 10px;
+  padding-right: 15px;
 }
 
 .workhistory {
