--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -102,6 +102,7 @@
     width: 600px;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     margin: auto;
     padding-top: 15px;
   }
