--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -109,7 +109,8 @@
 
   .contentbody {
     width: 600px;
-    display: flex;
+    display: inline-flex;
+    justify-content: space-between;
     align-items: center;
     padding-bottom: 15px;
   }
