--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -116,8 +116,7 @@
   }
 
   .bodypic {
-    width: 375px;
-    height: 200px;
+    flex-basis: 60%;
     align-self: center;
     border: 1px solid #ff0000;
     border-radius: 4px;
@@ -125,6 +124,7 @@
   }
 
   .caption {
+    flex-basis: 30%;
     align-self: center;
     background-color: #ffffff;
     padding: 5px;
