--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -106,7 +106,8 @@
 
   .contentbody {
     width: 600px;
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 15px;
