--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -108,6 +108,7 @@
     width: 600px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 15px;
