--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -109,7 +109,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding-bottom: 15px;
   }
@@ -132,6 +132,7 @@
 
   .workhistory {
     width: 600px;
-    justify-content: flex-end;
+    flex-basis: 100%;
+    position: relative;
   }
 }
