--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -102,6 +102,8 @@
     width: 600px;
     margin: auto;
     padding-top: 15px;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .contentbody {
@@ -109,7 +111,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding-bottom: 15px;
   }
