--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -100,6 +100,8 @@
 
   .wrapper {
     width: 600px;
+    display: flex;
+    flex-direction: column;
     margin: auto;
     padding-top: 15px;
   }
